--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -846,7 +846,7 @@ button {
     margin: 0 auto;
     margin-top: 125px;
     border-radius: 10px;
-    position: absolute;
+    position: fixed;
     top: 90px;
     right: 620px;
     overflow: hidden;
@@ -995,7 +995,7 @@ button {
 }
 .graphic1 {
     offset-path: path("M513.602 30.9586C276.802 -52.2414 168.102 55.4585 84.1019 139.959C15.7685 223.625 -88.5981 297.159 146.602 373.959C381.802 450.759 88.6019 700.459 378.602 688.459C488.219 694.331 705 509 804.5 621C945.602 726.959 1220.71 624.688 1369 664.5C1849.5 793.5 1213.5 339.5 1671.1 259.959C1783.9 240.351 1320.5 -101.163 1271 30.9586C1345.5 538.5 857.5 -171.5 832.5 270C607 580.542 610.174 64.8894 513.602 30.9586Z");
-    animation: move 30s linear infinite;
+    animation: move 15s linear infinite;
     background-color: #fff;
     box-shadow:
         0 0 60px 15px #fff,
@@ -1047,6 +1047,15 @@ button {
         0 0 60px 15px #fff,
         0 0 40px 10px #f0f,
         0 0 60px 10px #0ff;
+}
+.graphic5 {
+    offset-path: path("M1528 525.5C1416.8 1026.7 1305.67 1143 1264 1138.5M1264 1138.5C1222.33 955.167 1129.1 559.8 1089.5 445C1040 301.5 1223.5 1143.5 1049 1170C909.4 1191.2 883.5 695.5 888 445C886.5 174.833 973 -252.7 1331 198.5C1778.5 762.5 946.5 790 454 803C-38.5 816 -181 305.5 288.5 265.5C758 225.5 1970.5 32.5 1953 552C1939 967.6 1487.83 1116.17 1264 1138.5Z");
+    animation: move 20s linear infinite;
+    background-color: #fff;
+    box-shadow:
+        0 0 60px 15px #fff,
+        0 0 40px 10px rgb(255, 0, 255),
+        0 0 60px 10px rgb(255, 129, 224);
 }
 @keyframes move {
     100% {
