--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -11,7 +11,7 @@ header {
     box-shadow: 0px 7px 10px 0 rgba(0, 0, 0, 0.253);
     display: flex;
     position: fixed;
-    z-index: 9999;
+    z-index: 99999;
     top: 0;
     left: 0;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -126,31 +126,40 @@ header ul li {
     display: none;
 }
 #info {
-    width: 30%;
+    width: 100%;
+    height: 55px;
     margin: 0 auto;
+    /* background-color: white; */
+    /* background-color: rgba(156, 156, 156, 0.281); */
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
+    position: absolute;
     top: 110px;
+    left: 0;
     text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bold;
     font-size: 22px;
-    margin-top: 10px;
+    z-index: 99999;
 }  
 #content {
     width: 85%;
     margin: 0 auto;
     position: relative;
-    z-index: 99999;
+    z-index: 9999;
+}
+main {
+    overflow: hidden;
+    z-index: 0;
 }
 footer {
     width: 100%;
     height: 50px;
     position: fixed;
-    bottom: 0;
     left: 0;
+    bottom: 0;
+    z-index: 999999;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -372,19 +381,22 @@ input[type=checkbox] {
 
 .shoe-add-container {
     width: 60%;
+    max-height: 770px;
     margin: 0 auto;
-    margin: 100px;
+    margin-top: 50px;
     border: 1px solid lightgray;
     border-radius: 10px;
     overflow: hidden;
     display: flex;
-    padding: 30px 55px 37px 15px;
     /* padding: 55px 95px 55px 55px; */
     background: #9152f8;
     background: -webkit-linear-gradient(top, #7579ff, #b224ef);
     background: -o-linear-gradient(top, #7579ff, #b224ef);
     background: -moz-linear-gradient(top, #7579ff, #b224ef);
     background: linear-gradient(top, #7579ff, #b224ef);
+}
+.shoe-info-side {
+    padding: 0px;
 }
 .img-side {
     width: 80%;
@@ -418,7 +430,7 @@ input[type=checkbox] {
     padding-bottom: 40px;
     font-family: 'Poppins', sans-serif;
     font-weight: medium;
-    font-size: 30px;
+    font-size: 40px;
     color: #fff;
     line-height: 1.2;
     text-align: center;
@@ -714,7 +726,7 @@ button {
     background-color: rgba(129, 129, 129, 0.205);
     border-radius: 10px;
     overflow: hidden;
-    margin-top: 140px;
+    margin-top: 190px;
     transition: ease all 0.3s;
 }
 #allGainBtn {
@@ -927,6 +939,7 @@ button {
     position: relative;
     top: 20px;
     left: 110px;
+    margin-left: 20px;
     background-image: url("../Images/upload-secondary.png");
     background-position: center;
     background-repeat: no-repeat;
