--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -126,23 +126,22 @@ header ul li {
     display: none;
 }
 #info {
-    width: 100%;
-    height: 55px;
-    margin: 0 auto;
-    /* background-color: white; */
-    /* background-color: rgba(156, 156, 156, 0.281); */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
+    width: 700px;
+    height: 40px;
+    background-color: rgba(255, 255, 255, 0.63);
+    position: fixed;
     top: 110px;
-    left: 0;
+    left: 35%;
+    right: 55%;
+    margin: 0 auto;
+    opacity: 0;
+    z-index: 99999;
+
     text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bold;
     font-size: 22px;
-    z-index: 99999;
-}  
+}
 #content {
     width: 85%;
     margin: 0 auto;
@@ -380,15 +379,15 @@ input[type=checkbox] {
 
 
 .shoe-add-container {
-    width: 60%;
-    max-height: 770px;
+    width: 55%;
+    height: 700px;
     margin: 0 auto;
-    margin-top: 50px;
+    margin-top: 120px;
     border: 1px solid lightgray;
     border-radius: 10px;
     overflow: hidden;
     display: flex;
-    /* padding: 55px 95px 55px 55px; */
+    padding: 25px 45px 25px 25px;
     background: #9152f8;
     background: -webkit-linear-gradient(top, #7579ff, #b224ef);
     background: -o-linear-gradient(top, #7579ff, #b224ef);
@@ -406,17 +405,18 @@ input[type=checkbox] {
     padding: 10px;
 }
 .img-card {
-    width: 100%;
+    width: 680px;
+    height: 500px;
     border: 5px solid rgb(180, 180, 180);
     display: flex;
     align-items: center;
 }
 .img-card img {
-    /* width: 100%; */
-    /* height: 400px; */
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: scale-down;
+    width: 100%;
+    height: 100%;
+    /* max-width: 475px;
+    max-height: 500px; */
+    /* object-fit: cover; */
 }
 .shoe-info-side {
     width: 100%;
@@ -864,7 +864,7 @@ button {
     right: 620px;
     overflow: hidden;
     border: 1px solid rgba(128, 128, 128, 0.466);
-    z-index: 1;
+    z-index: 99999;
     /* background: #9152f8;
     background: -webkit-linear-gradient(top, #ff73f31f, #94c4e454);
     background: -o-linear-gradient(top, #ff73f31f, #94c4e454);
