--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -89,7 +89,7 @@ header ul li {
     margin-left: 25px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    z-index: 99999;
     transform: translateY(-80%);
     transition: all 0.2s;
 }
@@ -126,17 +126,18 @@ header ul li {
     display: none;
 }
 #info {
-    width: 900px;
-    height: 40px;
-    background-color: rgba(255, 255, 255, 0.63);
-    position: fixed;
-    top: 110px;
-    left: 30%;
-    right: 60%;
+    width: 1000px;
+    height: 45px;
+    /* background-color: rgba(255, 255, 255, 0.63); */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 120px;
+    left: 0;
     margin: 0 auto;
     opacity: 0;
-    z-index: 99999;
-
+    z-index: 9999;
     text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bold;
@@ -387,6 +388,7 @@ input[type=checkbox] {
     border-radius: 10px;
     overflow: hidden;
     display: flex;
+    z-index: 99;
     padding: 25px 45px 25px 25px;
     background: #9152f8;
     background: -webkit-linear-gradient(top, #7579ff, #b224ef);
@@ -647,9 +649,11 @@ button {
 
 .purchase-container {
     width: 50%;
-    height: 320px;
+    /* height: 670px; */
+    height: 270px;
     margin: 0 auto;
-    margin-top: 235px;
+    /* margin-top: 135px; */
+    margin-top: 250px;
     padding: 15px 55px 37px 55px;
     border: 1px solid lightgray;
     border-radius: 10px;
@@ -663,18 +667,37 @@ button {
 .purchase-title {
     font-family: 'Poppins', sans-serif;
     font-size: 48px;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
 }
-.purchase-container .mid-content .container-login100-form-btn {
-    margin-top: 25px;
-    font-size: 26px;
+.purchase-container .mid-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
-.purchase-container .mid-content label {
-    margin-bottom: 20px
+.purchase-container .mid-content .buy-image {
+    display: none;
+    width: 100%;
+    height: 400px;
+    border: 3px solid rgb(155, 155, 155);
+}
+.purchase-container .mid-content .buy-image img {
+    width: 100%;
+    height: 100%;
+}
+#purchase-list-models {
+    margin-bottom: 7px;
+}
+.purchase-container .mid-content .container-login100-form-btn {
+    width: 100%;
+    margin: 20px;
+}
+#submit-purchase {
+    width: 60%
 }
 
 
